[package]
name = "example"
version = "0.1.0"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example-sys = { path = "../example-sys" }

# Used to trigger the `audit-check` Action (non-informational advisory)
rustsec-example-crate = "=0.0.1"
spin = "*"  # Unmaintained
http = "=0.1.19"  # Unsound
log = "=0.4.10"  # Yanked

